replaced freerails ListXD with java List or Map